controller and service for user done
